refactor: remove global scans and add adaptive monitoring